--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "node": ">= 0.8.0"
   },
   "dependencies": {
-    "optimist": "~0.6.0"
+    "optimist": "~0.6.0",
+    "js-beautify": "~1.4.2",
+    "handlebars": "~1.3.0",
+    "express": "~3.4.7"
   }
 }
