--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "optimist": "~0.6.0",
     "js-beautify": "~1.4.2",
     "handlebars": "~1.3.0",
-    "express": "~3.4.7"
+    "express": "~3.4.7",
+    "express3-handlebars": "~0.5.0",
+    "nodemon": "~1.0.8",
+    "lodash": "~2.4.1"
   }
 }
