--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "~3.4.7",
     "express3-handlebars": "~0.5.0",
     "nodemon": "~1.0.8",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "mkdirp": "~0.3.5"
   }
 }
