--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express3-handlebars": "~0.5.0",
     "nodemon": "~1.0.8",
     "lodash": "~2.4.1",
-    "mkdirp": "~0.3.5"
+    "mkdirp": "~0.3.5",
+    "static-eval": "~0.1.0",
+    "esprima": "~1.0.4"
   }
 }
