--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lodash": "~2.4.1",
     "mkdirp": "~0.3.5",
     "static-eval": "~0.1.0",
-    "esprima": "~1.0.4"
+    "esprima": "~1.0.4",
+    "request": "~2.31.0"
   }
 }
