--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mkdirp": "~0.3.5",
     "static-eval": "~0.1.0",
     "esprima": "~1.0.4",
-    "request": "~2.31.0"
+    "request": "~2.31.0",
+    "coffee-script": "~1.6.3"
   }
 }
