--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "esprima": "~1.0.4",
     "request": "~2.31.0",
     "coffee-script": "~1.6.3",
-    "underscore.string": "~2.3.3"
+    "underscore.string": "~2.3.3",
+    "glob": "~3.2.8"
   }
 }
