Updates for npm

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "karma-requirejs": "~0.2.1",
     "karma-phantomjs-launcher": "~0.1.1",
     "karma": "~0.10.9",
-    "grunt-karma": "~0.6.2"
+    "grunt-karma": "~0.6.2",
+    "grunt-npm": "0.0.2"
   }
 }
