--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
   "bin": {
     "compylr": "./bin/compylr"
   },
-  "licsense": "MIT",
+  "license": "MIT",
   "dependencies": {
-    "optimist": "~0.6.0",
-    "js-beautify": "~1.4.2",
+    "esprima": "~1.0.4",
+    "glob": "~3.2.8",
     "handlebars": "~1.3.0",
+    "he": "~0.4.1",
+    "js-beautify": "~1.4.2",
     "lodash": "~2.4.1",
     "mkdirp": "~0.3.5",
-    "static-eval": "~0.1.0",
-    "esprima": "~1.0.4",
+    "optimist": "~0.6.0",
     "request": "~2.31.0",
-    "underscore.string": "~2.3.3",
-    "glob": "~3.2.8",
-    "ent": "~2.0.0"
+    "static-eval": "~0.1.0",
+    "underscore.string": "~2.3.3"
   },
   "devDependencies": {
     "coffee-script": "~1.6.3",
